--- a/languages/wp-module-notifications-nl_NL.po
+++ b/languages/wp-module-notifications-nl_NL.po
@@ -1,35 +1,41 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: \n"
-"Last-Translator: Vara Prasad Maruboina <varaprasad.maruboina@newfold.com>\n"
-"Language-Team: Dutch <vertaling@vrijschrift.org>\n"
+"Project-Id-Version: newfold-labswp-module-staging\n"
+"Report-Msgid-Bugs-To: https://github.com/newfold-labs/wp-module-notifications/issues\n"
+"Last-Translator: \n"
+"Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-02-13T10:18:39+00:00\n"
-"PO-Revision-Date: 2025-02-13 19:24+0530\n"
+"POT-Creation-Date: 2025-02-13T09:55:55+00:00\n"
+"PO-Revision-Date: 2025-02-19 15:33\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: wp-module-notifications\n"
-"Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Crowdin-Project: newfold-labswp-module-staging\n"
+"X-Crowdin-Project-ID: 764889\n"
+"X-Crowdin-Language: nl\n"
+"X-Crowdin-File: wp-module-notifications.pot\n"
+"X-Crowdin-File-ID: 34\n"
+"Language: nl_NL\n"
 
 #: bootstrap.php:14
 msgid "Notifications"
-msgstr ""
+msgstr "Notificaties"
 
 #: includes/NotificationsApi.php:88
 msgid "Event action"
-msgstr ""
+msgstr "Gebeurtenis actie"
 
 #: includes/NotificationsApi.php:96
 msgid "Event category"
-msgstr ""
+msgstr "Event categorie"
 
 #: includes/NotificationsApi.php:103
 msgid "Event data"
-msgstr ""
+msgstr "Gebeurtenis gegevens"
 
 #: includes/NotificationsApi.php:108
 msgid "Whether or not to queue the event"
-msgstr ""
+msgstr "Of het event al dan niet in de wachtrij moet staan"
+
